fix shop, shop-ship, z-index design

--- a/01_Client_Side/style.css
+++ b/01_Client_Side/style.css
@@ -298,6 +298,7 @@ p {
     height: 24px;
     border-radius: 100px;
     padding-left: 20px;
+    z-index: 1;
 }
 
 #fuelCounter #fuel {
@@ -363,7 +364,7 @@ p {
 
 #zone_joystick {
     position: absolute;
-    z-index: 99999999999999;
+    z-index: 9999;
     bottom: 100px;
     left: 100px;
     transform: translate(50%, 50%);
@@ -458,6 +459,14 @@ p {
     margin-left: auto;
 }
 
+/* display */
+
+.d-none{
+    display: none;
+}
+
+/* shop */
+
 .shop-ship {
     position: absolute;
     top: 0;
@@ -477,12 +486,12 @@ p {
     left: 0;
     background-size: cover;
     background-position: center;
-    z-index: 4;
+    z-index: 9999999;
 }
 
 .shop > div {
-    width: calc(100vw - 500px);
-    height: calc(100vh - 200px);
+    width: calc(100vw - 100px);
+    height: calc(100vh - 100px);
     background-color: white;
     border-radius: 5px;
     transition: .4s all .5s;
@@ -492,7 +501,6 @@ p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 10px;
 }
 
 .shop.active {
@@ -503,8 +511,14 @@ p {
     max-height: calc(100vh + 100px);
 }
 
+.shop h3{
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
 .shop img {
     width: 100%;
+    height: auto !important;
 }
 
 .shop p {
@@ -530,11 +544,7 @@ p {
 }
 
 .shop tr > *:nth-child(1) {
-    width: 240px;
-}
-
-.shop tr > *:nth-child(2) {
-    width: 60%;
+    width: 160px;
 }
 
 .shop tr > *:nth-child(3) {
@@ -596,16 +606,17 @@ p {
 }
 
 .enter-zone {
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
     background-color: rgba(219, 63, 61, .4);
     border: 3px solid rgba(219, 63, 61, .8);
     position: absolute;
-    top: 110px;
-    left: 150px;
+    top: 75px;
+    left: 80px;
     border-radius: 50%;
     transform: scale(0);
     transition: .4s transform;
+    z-index: 1;
 }
 
 .enter-zone.active {
@@ -614,7 +625,7 @@ p {
 }
 
 .enter-zone i {
-    font-size: 14px;
+    font-size: 12px;
     position: absolute;
     top: 50%;
     left: 50%;
